# Matrix

./: CMakeLists.txt  Complex.cpp  Complex.h  Exception.cpp  Exception.h  Matrix.cpp  README.md  SLE_BackUp  SLE_Gauss_Solutions_BackUp.txt  file_reader.cpp  file_writer.cpp  gaussian_elimination.cpp  main.cpp  rational.cpp  utility.cpp
Data/: A.txt  SLE.txt  SLE_Gauss_Solutions.txt  SLE_Solution.txt
headers/: Matrix.h  SLE_Gauss_Solutions.txt  file_reader.h  file_writer.h  gaussian_elimination.h  rational.h  utility.h
